# g2gtools

./: .dockerignore  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  index.html  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
docs/: ExampleDocument.xlsx  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/docs/g2gtools/: modules.rst
docs/g2gtools/: g2gtools.bamsam.rst  g2gtools.bed.rst  g2gtools.bins.rst  g2gtools.chain.rst  g2gtools.exceptions.rst  g2gtools.fasta.rst  g2gtools.g2g.rst  g2gtools.g2g_commands.rst  g2gtools.g2g_utils.rst  g2gtools.gtf.rst  g2gtools.kmer.rst  g2gtools.rst  g2gtools.seq_offsets.rst  g2gtools.sequence.rst  g2gtools.vcf.rst  modules.rst
example/: example.snps.vcf  example1.chain  example1.fa  example1.fa.fai  example1.sam
g2gtools/: __init__.py  bamsam.py  bcsam.py  bed.py  bins.py  bsam.py  chain.py  commands.py  compat.py  exceptions.py  fasta.py  fasta_patch.py  fasta_transform.py  g2g.py  g2g_commands.py  g2g_fileutils.py  g2g_utils.py  gtf.py  gtf_db.py  seq_offsets.py  sequence.py  vcf.py  vcf2chain.py  vcf2vci.py  vci.py  vci_parse.py  version.py
js/: jquery.fullPage.js
scripts/: run_g2gtools.sh
src/g2gtools/: __init__.py  bcsam.py  bed.py  commands.py  exceptions.py  fasta.py  fasta_patch.py  fasta_transform.py  g2g.py  g2g_utils.py  gtf.py  gtf_db.py  region.py  vcf.py  vcf2vci.py  vci.py
stylesheets/: alvaro1.css  alvaro2.css  alvaro3.css  examples.css  stylesheet.css
tests/: test_g2gtools.py
