[project]
name = 'g2gtools'
version = '2.0.0'
description = 'A suite of tools for the reconstruction of personal diploid genomes and better coordinate conversion'
authors = [
    {name = 'KB Choi'},
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
]
maintainers = [
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
]
readme = 'README.md'
dependencies = [
    'bx-python==0.9.0',
    'click==8.1.3',
    'natsort==8.3.1',
    'pysam==0.20.0',
    'rich==13.3.5',
    'typer==0.9.0',
]

[project.urls]
repository = 'https://github.com/churchill-lab/g2gtools'

[project.scripts]
g2gtools = 'g2gtools.commands:app'

[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

