[project]
name = 'g2gtools'
version = '3.1.0'
description = 'A suite of tools for the reconstruction of personal diploid genomes and better coordinate conversion'
authors = [
    {name = 'KB Choi'},
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
]
maintainers = [
    {name = 'Matthew Vincent', email = 'matt.vincent@jax.org'},
]
readme = 'README.md'
dependencies = [
    'bx-python==0.13.0',
    'click==8.1.8',
    'intervaltree==3.1.0',
    'natsort==8.4.0',
    'pandas==2.2.3',
    'pysam==0.23.0',
    'rich==13.9.4',
    'typer==0.15.1',
]

[project.urls]
repository = 'https://github.com/churchill-lab/g2gtools'

[project.scripts]
g2gtools = 'g2gtools.commands:app'

[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']

